--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
 
+<body>
+  <h1>Welcome to My Page</h1>
+  <p>This is a simple HTML document.</p>
+
+  <button id="my-button">Вписати своє ім'я</button>
+
+  <form id="age-form">
+    <label for="age-input"></label>
+    <input type="number" id="year-input" placeholder="Введіть ваш рік народження">
+    <button id="check-age-button">Перевірити вік</button>
+  </form>
   <script src="index.js"></script>
 </body>
+
 </html>
